--- a/index.html
+++ b/index.html
@@ -1,17 +1,88 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <title>Mithun Reddy | Portfolio</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Mithun Reddy | Portfolio</title>
+
+    <style>
+        body {
+            margin: 0;
+            font-family: Arial, Helvetica, sans-serif;
+            background: linear-gradient(135deg, #1f2933, #111827);
+            color: #ffffff;
+        }
+
+        .container {
+            max-width: 800px;
+            margin: 80px auto;
+            padding: 40px;
+            background: #1f2933;
+            border-radius: 12px;
+            box-shadow: 0 10px 30px rgba(0, 0, 0, 0.5);
+            text-align: center;
+        }
+
+        h1 {
+            font-size: 42px;
+            margin-bottom: 10px;
+        }
+
+        h2 {
+            font-size: 22px;
+            font-weight: normal;
+            color: #9ca3af;
+            margin-bottom: 30px;
+        }
+
+        p {
+            font-size: 18px;
+            line-height: 1.6;
+            margin-bottom: 30px;
+        }
+
+        .btn {
+            display: inline-block;
+            padding: 12px 24px;
+            background: #2563eb;
+            color: white;
+            text-decoration: none;
+            border-radius: 8px;
+            font-size: 16px;
+            transition: background 0.3s ease;
+        }
+
+        .btn:hover {
+            background: #1d4ed8;
+        }
+
+        footer {
+            margin-top: 40px;
+            font-size: 14px;
+            color: #9ca3af;
+        }
+    </style>
 </head>
 <body>
-  <h1>Mithun Reddy</h1>
-  <p>Aspiring Software Engineer</p>
-  <p>Welcome to my portfolio website.</p>
 
-  <p>
-    <a href="https://github.com/Mithunreddy-bot" target="_blank">
-      Visit My GitHub Profile
-    </a>
-  </p>
+    <div class="container">
+        <h1>Mithun Reddy</h1>
+        <h2>Aspiring Software Engineer</h2>
+
+        <p>
+            Welcome to my portfolio website.  
+            I am passionate about software development, problem-solving, and building efficient web applications.
+        </p>
+
+        <a class="btn" href="https://github.com/Mithunreddy-bot" target="_blank">
+            Visit My GitHub
+        </a>
+
+        <footer>
+            © 2025 Mithun Reddy
+        </footer>
+    </div>
+
 </body>
 </html>
+
