--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@ p, li {
 <div class="card center">
     <h3>📞 Contact Me</h3>
     <p>Email: <strong>alumelumithun@gmail.com</strong></p>
-    <p>LinkedIn: <a href="www.linkedin.com/in/mithun-reddy-444493316" target="_blank" style="color:#60a5fa;">View Profile</a></p>
+    <p>LinkedIn: <a href="https://www.linkedin.com/in/mithun-reddy-444493316/" target="_blank" style="color:#60a5fa;">View Profile</a></p>
 </div>
 
 </div>
