--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@ p, li {
     <h2>Aspiring Software Engineer</h2>
     <a class="btn" href="resume.pdf" download>Download Resume</a>
     <a class="btn" href="https://github.com/Mithunreddy-bot" target="_blank">GitHub</a>
-    <a class="btn" href="https://www.linkedin.com/in/mithun-reddy-444493316/" target="_blank">LinkedIn</a>
+    <a class="btn" href="www.linkedin.com/in/mithun-reddy-444493316" target="_blank">LinkedIn</a>
 </div>
 
 <!-- EDUCATION -->
