--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@ p, li {
 
         <div class="project">
             <h4>Solar tracking system using iot</h4>
-            <p>the Solar tracking system asorbs the light or sunlight upt to degree for more efficiency of solar energy.</p>
+            <p>the Solar tracking system absorbs the light or sunlight upto 180 degree for more efficiency of solar energy.</p>
         </div>
 
         <div class="project">
@@ -137,8 +137,8 @@ p, li {
         </div>
 
         <div class="project">
-            <h4>Music recommendation system y facial expression</h4>
-            <p>using human facial expression recomending a song using spotify api.</p>
+            <h4>Music recommendation system facial expression</h4>
+            <p>using human facial expression recomending a song using spotify api or linked to it.</p>
         </div>
 
     </div>
